package edu.hitsz.aircraft.props;

/**
 * @Author yu
 */

public class BloodProp extends AbstractProp {
    public BloodProp(int locationX, int locationY, int speedX, double speedY, int category) {
        super(locationX, locationY, speedX, speedY, category);
    }
}
